--- a/Result.html
+++ b/Result.html
@@ -52,8 +52,9 @@
 </head>
 <body id="resultBody">
   <div class="title" id="resultText">Meet your type<br>in the<br>ROOM!</div>
-  <div class="subtitle" id="subtitleText"></div>
-
+  <div class="subtitle">
+    Audition for our reality dating show by participating in our speed-dating game, <strong id="pickupLine">The Pickup Line!</strong>
+  </div>
   <div class="bonus" id="bonusText" style="display: none;">
     Visit our chocolate shop and use the password: <strong id="sweetSpot">Sweet Spot!</strong><br>
     to gain entry to our speakeasy:<br>
@@ -64,12 +65,9 @@
     const params = new URLSearchParams(window.location.search);
     const room = params.get("room");
     const sugar = params.get("sugar");
-    const q4 = params.get("q4");
-    const q6 = params.get("q6");
 
     const resultText = document.getElementById("resultText");
     const resultBody = document.getElementById("resultBody");
-    const subtitleText = document.getElementById("subtitleText");
     const bonusText = document.getElementById("bonusText");
 
     if (room === "red") {
@@ -85,15 +83,6 @@
 
     if (sugar === "true") {
       bonusText.style.display = "block";
-    }
-
-    // Show custom subtitle if q4 and q6 match the desired values
-    if (q4 === "yes" && (q6 === "flaunt" || q6 === "partner shine")) {
-      subtitleText.innerHTML = `
-        <strong>You’re invited to audition for our reality dating show!</strong><br>
-        Participate in the speed dating game <em><strong>The Pickup Line</strong></em> to audition.<br>
-        Once you’re in, you won’t want to pull out.
-      `;
     }
   </script>
 </body>
