--- a/Result.html
+++ b/Result.html
@@ -52,13 +52,13 @@
 </head>
 <body id="resultBody">
   <div class="title" id="resultText">Meet your type<br>in the<br>ROOM!</div>
-  <div class="subtitle">
-    Audition for our reality dating show by participating in our speed-dating game, <strong id="pickupLine">The Pickup Line!</strong>
+  <div class="subtitle" id="invitationText">
+    You’re invited to audition for our reality dating show! Participate in the speed dating game <strong>The Pickup Line</strong> to audition. Once you’re in, you won’t want to pull out.
   </div>
   <div class="bonus" id="bonusText" style="display: none;">
-    Visit our chocolate shop and use the password: <strong id="sweetSpot">Sweet Spot!</strong><br>
+    Visit our chocolate shop and use the password: <strong>Sweet Spot!</strong><br>
     to gain entry to our speakeasy:<br>
-    <strong id="sugarDaddys">Sugar Daddy’s</strong>
+    <strong>Sugar Daddy’s</strong>
   </div>
 
   <script>
