--- a/Result.html
+++ b/Result.html
@@ -22,8 +22,9 @@
       margin-bottom: 25px;
     }
 
-    .subtitle, .archetype, .bonus {
+    .subtitle {
       font-size: 1.2rem;
+      font-weight: 400;
       margin-bottom: 30px;
     }
 
@@ -33,106 +34,55 @@
       line-height: 1.5;
     }
 
-    .red { background-color: #950606; }
-    .green { background-color: #06954E; }
-    .blue { background-color: #064D95; }
+    .red {
+      background-color: #950606;
+      text-shadow: 0 0 5px #ff4d4d, 0 0 10px #ff4d4d;
+    }
+
+    .green {
+      background-color: #06954E;
+      text-shadow: 0 0 5px #88e788, 0 0 10px #88e788;
+    }
+
+    .blue {
+      background-color: #064D95;
+      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
+    }
   </style>
 </head>
 <body id="resultBody">
-  <div class="title" id="roomTitle">Welcome to Your Room</div>
-  <div class="archetype" id="archetypeText"></div>
-  <div class="subtitle" id="auditionText" style="display: none;">
-    Audition for our reality dating show by participating in our speed-dating game, <strong>The Pickup Line!</strong>
+  <div class="title" id="resultText">Meet your type<br>in the<br>ROOM!</div>
+  <div class="subtitle">
+    Audition for our reality dating show by participating in our speed-dating game, <strong id="pickupLine">The Pickup Line!</strong>
   </div>
-  <div class="bonus" id="speakeasyText" style="display: none;">
-    Visit our chocolate shop and use the password: <strong>Sweet Spot!</strong><br>
+  <div class="bonus" id="bonusText" style="display: none;">
+    Visit our chocolate shop and use the password: <strong id="sweetSpot">Sweet Spot!</strong><br>
     to gain entry to our speakeasy:<br>
-    <strong>Sugar Daddy’s</strong>
+    <strong id="sugarDaddys">Sugar Daddy’s</strong>
   </div>
 
   <script>
     const params = new URLSearchParams(window.location.search);
-    const q3 = params.get("q3"); // Dominance
-    const q4 = params.get("q4"); // PDA
-    const q5 = params.get("q5"); // Sugar daddy
-    const q6 = params.get("q6"); // Attention
-    const q7 = params.get("q7"); // Room from threesomes
+    const room = params.get("room");
+    const sugar = params.get("sugar");
 
+    const resultText = document.getElementById("resultText");
     const resultBody = document.getElementById("resultBody");
-    const roomTitle = document.getElementById("roomTitle");
-    const archetypeText = document.getElementById("archetypeText");
-    const auditionText = document.getElementById("auditionText");
-    const speakeasyText = document.getElementById("speakeasyText");
+    const bonusText = document.getElementById("bonusText");
 
-    const roomColor = q7.toLowerCase().includes("red") ? "red" :
-                      q7.toLowerCase().includes("green") ? "green" : "blue";
-
-    const isSwitchMinus = q6.toLowerCase().includes("let my partner shine");
-    const isAudition = (
-      q4.toLowerCase().includes("yes") || q4.toLowerCase().includes("only a little")
-    ) && (
-      q6.toLowerCase().includes("if you got it, flaunt it") || q6.toLowerCase().includes("let my partner shine")
-    );
-
-    const isSugar = (
-      q5.toLowerCase().includes("yes") ||
-      q5.toLowerCase().includes("wouldn’t mind") ||
-      q5.toLowerCase().includes("i am the sugar")
-    );
-
-    let archetype = "", description = "";
-
-    if (roomColor === "red") {
-      if (q3 === "Dom") {
-        archetype = "Dungeon Master";
-        description = "Takes charge with power and precision.";
-      } else if (q3 === "Sub") {
-        archetype = "Obedient Pet";
-        description = "Loyal, responsive, and always eager to please.";
-      } else if (q3 === "Switch") {
-        archetype = isSwitchMinus ? "Brat Gone Wild" : "Naughty Free-Spirit";
-        description = isSwitchMinus
-          ? "Playfully rebellious with a soft side."
-          : "Loves the thrill of being in control—sometimes.";
-      }
-    } else if (roomColor === "green") {
-      if (q3 === "Dom") {
-        archetype = "Charmer in Charge";
-        description = "Seductive leadership with a wink.";
-      } else if (q3 === "Sub") {
-        archetype = "Promiscuous Plaything";
-        description = "Curious and game for anything.";
-      } else if (q3 === "Switch") {
-        archetype = isSwitchMinus ? "Generous Giver" : "Bedroom Adventurer";
-        description = isSwitchMinus
-          ? "Pleasure-focused, with a tender touch."
-          : "Loves to experiment and explore.";
-      }
-    } else if (roomColor === "blue") {
-      if (q3 === "Dom") {
-        archetype = "Tender Protector";
-        description = "Gentle dominance with a nurturing streak.";
-      } else if (q3 === "Sub") {
-        archetype = "Devoted Darling";
-        description = "Sweet, affectionate, and loyal.";
-      } else if (q3 === "Switch") {
-        archetype = isSwitchMinus ? "Lover Next Door" : "Nurturing Switch";
-        description = isSwitchMinus
-          ? "Lowkey flirty with heart-melting warmth."
-          : "Balance of control and care.";
-      }
+    if (room === "red") {
+      resultText.innerHTML = "Meet your type<br>in our<br>RED ROOM!";
+      resultBody.classList.add("red");
+    } else if (room === "green") {
+      resultText.innerHTML = "Meet your type<br>in our<br>GREEN ROOM!";
+      resultBody.classList.add("green");
+    } else if (room === "blue") {
+      resultText.innerHTML = "Meet your type<br>in our<br>BLUE ROOM!";
+      resultBody.classList.add("blue");
     }
 
-    roomTitle.innerHTML = `Welcome to the <br><strong>${roomColor.toUpperCase()} ROOM</strong>`;
-    archetypeText.innerHTML = `<strong>${archetype}</strong><br>${description}`;
-    resultBody.classList.add(roomColor);
-
-    if (isAudition) {
-      auditionText.style.display = "block";
-    }
-
-    if (isSugar) {
-      speakeasyText.style.display = "block";
+    if (sugar === "true") {
+      bonusText.style.display = "block";
     }
   </script>
 </body>
