--- a/Result.html
+++ b/Result.html
@@ -5,24 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Result</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      text-align: center;
+      padding: 50px 20px;
+    }
+    .title {
+      font-size: 2.6rem;
+      font-weight: bold;
+      font-style: italic;
+      line-height: 1.2;
+      margin-bottom: 25px;
+    }
+    .subtitle, .bonus, .audition, .type-info, .matches {
+      font-size: 1.1rem;
+      margin-top: 20px;
+      line-height: 1.5;
+    }
+    .red {
+      background-color: #950606;
+      text-shadow: 0 0 5px #ff4d4d, 0 0 10px #ff4d4d;
+    }
+    .green {
+      background-color: #06954E;
+      text-shadow: 0 0 5px #88e788, 0 0 10px #88e788;
+    }
+    .blue {
+      background-color: #064D95;
+      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
+    }
+  </style>
 </head>
 <body id="resultBody">
   <div class="title" id="resultText">Meet your type<br>in the<br>ROOM!</div>
   <div class="subtitle" id="typeLabel"></div>
-
-  <div class="audition" id="auditionText" style="display: none;">
-    🎬 You qualify for an audition in our reality dating show: <strong>The Pickup Line!</strong>
-  </div>
-
-  <div class="bonus" id="bonusText" style="display: none;">
-    🍫 You've been invited to our speakeasy!<br>
-    Use the password <strong>Sweet Spot</strong> at:<br>
-    <strong>Sugar Daddy’s</strong>
-  </div>
-
+  <div class="bonus" id="bonusText" style="display:none;"></div>
+  <div class="audition" id="auditionText" style="display:none;"></div>
   <div class="type-info" id="typeDetails"></div>
-  <div class="type-info" id="matches"></div>
+  <div class="matches" id="matches"></div>
 
   <script>
     const params = new URLSearchParams(window.location.search);
@@ -31,7 +54,7 @@
       answers[`q${i}`] = params.get(`q${i}`);
     }
 
-    // ROOM LOGIC (Q3 is main determinant)
+    // ROOM (Q3 is final authority)
     let room = "blue";
     if (answers.q3 === "bdsm") room = "red";
     else if (answers.q3 === "toys") room = "green";
@@ -41,31 +64,31 @@
     const resultBody = document.getElementById("resultBody");
     const typeLabel = document.getElementById("typeLabel");
 
-    if (room === "red") {
-      resultText.innerHTML = "Meet your type<br>in our<br>RED ROOM!";
-      resultBody.classList.add("red");
-    } else if (room === "green") {
-      resultText.innerHTML = "Meet your type<br>in our<br>GREEN ROOM!";
-      resultBody.classList.add("green");
-    } else {
-      resultText.innerHTML = "Meet your type<br>in our<br>BLUE ROOM!";
-      resultBody.classList.add("blue");
+    resultBody.classList.add(room);
+    resultText.innerHTML = `Meet your type<br>in our<br>${room.toUpperCase()} ROOM!`;
+
+    // Sugar Daddy’s Invite
+    if (["yes", "iam"].includes(answers.q5)) {
+      document.getElementById("bonusText").style.display = "block";
+      document.getElementById("bonusText").innerHTML =
+        `🍫 Visit our chocolate shop and use the password: <strong>Sweet Spot!</strong><br>
+         to gain entry to our speakeasy:<br>
+         <strong>Sugar Daddy’s</strong>`;
     }
 
-    // AUDITION LOGIC (Q4 + Q6)
+    // Audition Invite
     if (
       ["yes", "little"].includes(answers.q4) &&
       ["flaunt", "partner shine"].includes(answers.q6)
     ) {
       document.getElementById("auditionText").style.display = "block";
+      document.getElementById("auditionText").innerHTML =
+        `🎬 You’re invited to audition for our reality dating show!<br>
+         Participate in the speed dating game <strong>The Pickup Line</strong> to audition.<br>
+         Once you’re in, you won’t want to pull out.`;
     }
 
-    // SUGAR DADDY'S SPEAKEASY LOGIC (Q5)
-    if (["yes", "maybe", "iam"].includes(answers.q5)) {
-      document.getElementById("bonusText").style.display = "block";
-    }
-
-    // ARCHETYPE LOGIC
+    // Archetype and Compatibility
     const typeMap = {
       blue: {
         control: "Tender Protector",
@@ -102,32 +125,31 @@
       "Obedient Pet": "Gets pleasure from surrender and structure.",
       "The Punish Me": "Pushes limits to tease and connect.",
       "The Provoker": "Bold, daring, and deeply charged.",
-      "Dungeon Master": "Powerful, commanding, and in control.",
-      "Mystery Lover": "You're one of a kind... let's explore."
+      "Dungeon Master": "Powerful, commanding, and in control."
     };
 
     const compatibilityMap = {
-      "Devoted Darling": ["Tender Protector", "Charmer in Charge", "The Punish Me"],
-      "Mood Multiplier": ["Generous Giver", "The Provoker", "Obedient Pet"],
-      "Hottie Next Door": ["Bedroom Adventurer", "Dungeon Master", "Devoted Darling"],
-      "Tender Protector": ["Devoted Darling", "Obedient Pet", "Mood Multiplier"],
-      "Promiscuous Plaything": ["Generous Giver", "Mood Multiplier", "Dungeon Master"],
-      "Generous Giver": ["Charmer in Charge", "Hottie Next Door", "The Punish Me"],
-      "Bedroom Adventurer": ["Mood Multiplier", "The Provoker", "Charmer in Charge"],
-      "Charmer in Charge": ["Generous Giver", "Devoted Darling", "Bedroom Adventurer"],
-      "Obedient Pet": ["Dungeon Master", "Tender Protector", "Mood Multiplier"],
-      "The Punish Me": ["Tender Protector", "Charmer in Charge", "Promiscuous Plaything"],
-      "The Provoker": ["Mood Multiplier", "Bedroom Adventurer", "The Punish Me"],
-      "Dungeon Master": ["Obedient Pet", "Promiscuous Plaything", "Devoted Darling"]
+      "Dungeon Master": ["Obedient Pet", "The Punish Me", "Promiscuous Plaything"],
+      "The Provoker": ["The Punish Me", "Obedient Pet", "Generous Giver"],
+      "The Punish Me": ["The Provoker", "Dungeon Master", "Bedroom Adventurer"],
+      "Obedient Pet": ["Dungeon Master", "The Provoker", "Charmer in Charge"],
+      "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Obedient Pet"],
+      "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "The Punish Me"],
+      "Generous Giver": ["Bedroom Adventurer", "Charmer in Charge", "The Provoker"],
+      "Promiscuous Plaything": ["Charmer in Charge", "Bedroom Adventurer", "Dungeon Master"],
+      "Tender Protector": ["Devoted Darling", "Mood Multiplier", "Promiscuous Plaything"],
+      "Hottie Next Door": ["Mood Multiplier", "Devoted Darling", "Generous Giver"],
+      "Mood Multiplier": ["Hottie Next Door", "Tender Protector", "Bedroom Adventurer"],
+      "Devoted Darling": ["Tender Protector", "Hottie Next Door", "Charmer in Charge"]
     };
 
-    const userType = typeMap[room][answers.q9] || "Mystery Lover";
-    const matches = compatibilityMap[userType] || ["Unknown", "Unknown", "Unknown"];
+    const userType = typeMap[room][answers.q9];
+    const matches = compatibilityMap[userType];
 
     typeLabel.innerHTML = `<strong>Your Archetype:</strong> ${userType}`;
     document.getElementById("typeDetails").innerHTML = typeDescriptions[userType];
     document.getElementById("matches").innerHTML = `
-      <br><strong>Your Top Compatibility Matches:</strong><br>
+      <strong>Your Top Compatibility Matches:</strong><br>
       ❤️ ${matches[0]}<br>
       💞 ${matches[1]}<br>
       🎲 Wildcard: ${matches[2]}
